# restaurant_review

./: .gitignore  README.md  pyproject.toml  requirements.txt
config/: settings.py  urls.py
config/settings/: base.py  local.py  prod.py
restaurants/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
reviews/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
users/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
